--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -71,12 +71,12 @@
 <!--                        </li>-->
                     <div class="col-md-6">
                        <!--프로필-->
-                       <!--/* <p>[[${post.member.nickname}]]</p>
+                        <p>[[${post.member.nickname}]]</p>
                         <div class="profile_img">
                             <a th:href="@{/members/{memId}(memId=${post.member.memId})}">
                              <img th:src="|/members/${post.member.memId}/profileImg|" alt="프로필이미지"/>
                             </a>
-                        </div> */-->
+                        </div>
                         <!--카테고리-->
                         <div class="small mb-1" th:text="${post.category.getCategory()}">SKU: BST-498</div>
                         <!--제목-->
