--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -11,8 +11,10 @@
     <div class="profile_img">
         <img th:src="|/members/${member.memId}/profileImg|" alt="프로필이미지">
     </div>
+    <br>
+    <button th:if="${session?.loginMember.memId == member.memId }"> 프로필 편집 </button>
     <form th:action="|/members/${member.memId}/block|" th:method="post">
-        <button th:if="${session.loginMember.memId != member.memId && !blockState}" type="submit">
+        <button th:if="${session?.loginMember.memId != member.memId && !blockState}" type="submit">
           차단하기</button>
     </form>
     <form th:action="|/members/${member.memId}/cancelBlock|" th:method="post">
@@ -22,7 +24,9 @@
     </form>
 
     <h3 th:text="|${member.memId}님|"></h3>
-    <p th:text="|${member.memId}님의 매너온도 : ${member.mannerScore}|"></p>
+    <p th:text="|${member.nickname}님의 매너온도 : ${member.mannerScore}|"></p>
+    <span th:text="|${member.nickname}님의 판매상품 : ${countPost}개|"></span>
+    <button type="button"> >이동</button>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
