--- a/src/main/resources/templates/update_post.html
+++ b/src/main/resources/templates/update_post.html
@@ -99,8 +99,10 @@
             //실제 업로드 부분
             //upload ajax
             //파일업로드를 위해 contentType 속성을 반드시 false로 지정한다 -> multipart/form-data 타입을 사용하기위해
+            let postId = [[${post.postId}]];
+            console.log("postId:"+postId);
             $.ajax({
-                url: '',
+                url: '/post/updatePost/' + postId,
                 type: 'POST',
                 data: formData,
                 processData: false, //processData : false로 선언 시 formData를 string으로 변환하지 않음
