--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -97,6 +97,10 @@
                         <a href="#"> 게시글숨김</a><br/>
                         <a th:href="|/post/updatePost/${post.postId}|"> 게시글수정</a><br/>
 
+                        <!--임시 판매 완료 버튼(for 리뷰)-->
+                        <form action="/review/">
+                        <button type="submit">판매완료 (임시)</button>
+                        </form>
                     </div>
                 </div>
             </div>
