--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -149,6 +149,15 @@
                 `</p>
                     </div>
                 </li>`;
+
+            $.ajax({
+                type: "POST",
+                url: "/chat/getChatMsg/"+data.room,
+                success: function (result) {
+                    console.log('수신한 메세지 확인 처리 완료! >>> ' + result);
+                    $('#chat').text(Number($('#chat').text())-1);
+                },
+            });
         }
         $('#chatting').append(message);
     }
